// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker renders correctly 1`] = `
<div
  class="kd-color-picker-container"
>
  <span
    class="kd-input-wrapper kd-input-wrapper-size-middle kd-input-wrapper-underline kd-color-picker-input"
  >
    <span
      class="kd-input-prefix"
    >
      <div
        class="kd-color-picker-icon-container"
      >
        <div
          class="kd-color-picker-icon kd-color-picker-icon-underline"
          style="background-color:RGB(255, 255, 255)"
        >
          <div
            class="kd-color-picker-icon-no-color-line"
          />
        </div>
      </div>
    </span>
    <input
      class="kd-input kd-input-size-middle kd-input-underline"
      placeholder="#"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`ColorPicker renders correctly 2`] = `
<div
  class="kd-color-picker-container"
>
  <span
    class="kd-input-wrapper kd-input-wrapper-size-middle kd-color-picker-input"
  >
    <span
      class="kd-input-prefix"
    >
      <div
        class="kd-color-picker-icon-container"
      >
        <div
          class="kd-color-picker-icon kd-color-picker-icon-bordered"
          style="background-color:RGB(255, 255, 255)"
        >
          <div
            class="kd-color-picker-icon-no-color-line"
          />
        </div>
      </div>
    </span>
    <input
      class="kd-input kd-input-size-middle"
      placeholder="#"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`ColorPicker renders correctly with no child 1`] = `
<ColorPicker>
  <div
    className="kd-color-picker-container"
  >
    <Input
      borderType="bordered"
      className="kd-color-picker-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="#"
      prefix={
        <div
          className="kd-color-picker-icon-container"
          onClick={[Function]}
        >
          <div
            className="kd-color-picker-icon kd-color-picker-icon-bordered"
            style={
              Object {
                "backgroundColor": "RGB(255, 255, 255)",
              }
            }
          >
            <div
              className="kd-color-picker-icon-no-color-line"
            />
          </div>
        </div>
      }
      value=""
    >
      <ClearableInput
        borderType="bordered"
        className="kd-color-picker-input"
        element={
          <input
            className="kd-input kd-input-size-middle"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="#"
            type="text"
            value=""
          />
        }
        focused={false}
        handleReset={[Function]}
        inputCount={null}
        inputType="input"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        placeholder="#"
        prefix={
          <div
            className="kd-color-picker-icon-container"
            onClick={[Function]}
          >
            <div
              className="kd-color-picker-icon kd-color-picker-icon-bordered"
              style={
                Object {
                  "backgroundColor": "RGB(255, 255, 255)",
                }
              }
            >
              <div
                className="kd-color-picker-icon-no-color-line"
              />
            </div>
          </div>
        }
        prefixCls="kd-input"
        size="middle"
        type="text"
        value=""
      >
        <span
          className="kd-input-wrapper kd-input-wrapper-size-middle kd-color-picker-input"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <span
            className="kd-input-prefix"
            onMouseDown={[Function]}
          >
            <div
              className="kd-color-picker-icon-container"
              onClick={[Function]}
            >
              <div
                className="kd-color-picker-icon kd-color-picker-icon-bordered"
                style={
                  Object {
                    "backgroundColor": "RGB(255, 255, 255)",
                  }
                }
              >
                <div
                  className="kd-color-picker-icon-no-color-line"
                />
              </div>
            </div>
          </span>
          <input
            className="kd-input kd-input-size-middle"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="#"
            style={null}
            type="text"
            value=""
          />
        </span>
      </ClearableInput>
    </Input>
  </div>
</ColorPicker>
`;

exports[`ColorPicker renders correctly with null or undefined 1`] = `
<ColorPicker>
  <div
    className="kd-color-picker-container"
  >
    <Input
      borderType="bordered"
      className="kd-color-picker-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="#"
      prefix={
        <div
          className="kd-color-picker-icon-container"
          onClick={[Function]}
        >
          <div
            className="kd-color-picker-icon kd-color-picker-icon-bordered"
            style={
              Object {
                "backgroundColor": "RGB(255, 255, 255)",
              }
            }
          >
            <div
              className="kd-color-picker-icon-no-color-line"
            />
          </div>
        </div>
      }
      value=""
    >
      <ClearableInput
        borderType="bordered"
        className="kd-color-picker-input"
        element={
          <input
            className="kd-input kd-input-size-middle"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="#"
            type="text"
            value=""
          />
        }
        focused={false}
        handleReset={[Function]}
        inputCount={null}
        inputType="input"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        placeholder="#"
        prefix={
          <div
            className="kd-color-picker-icon-container"
            onClick={[Function]}
          >
            <div
              className="kd-color-picker-icon kd-color-picker-icon-bordered"
              style={
                Object {
                  "backgroundColor": "RGB(255, 255, 255)",
                }
              }
            >
              <div
                className="kd-color-picker-icon-no-color-line"
              />
            </div>
          </div>
        }
        prefixCls="kd-input"
        size="middle"
        type="text"
        value=""
      >
        <span
          className="kd-input-wrapper kd-input-wrapper-size-middle kd-color-picker-input"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <span
            className="kd-input-prefix"
            onMouseDown={[Function]}
          >
            <div
              className="kd-color-picker-icon-container"
              onClick={[Function]}
            >
              <div
                className="kd-color-picker-icon kd-color-picker-icon-bordered"
                style={
                  Object {
                    "backgroundColor": "RGB(255, 255, 255)",
                  }
                }
              >
                <div
                  className="kd-color-picker-icon-no-color-line"
                />
              </div>
            </div>
          </span>
          <input
            className="kd-input kd-input-size-middle"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyUp={[Function]}
            placeholder="#"
            style={null}
            type="text"
            value=""
          />
        </span>
      </ClearableInput>
    </Input>
  </div>
</ColorPicker>
`;
